# Olimpiadi_Info

./: CMakeLists.txt  README.md
abbassatutto/: abbassatutto.html  abbassatutto_input_2.txt
algobadge/antivirus/: antivirus.html  antivirus_input_1.txt  antivirus_input_2.txt  antivirus_output_1.txt  antivirus_output_2.txt
algobadge/batti_gli_avversari/: abbassatutto.html  abbassatutto_input_1 (1).txt  abbassatutto_output_1 (1).txt
algobadge/biglietti/: biglietti.py
algobadge/caramelle/: caramelle.py  caramelle_input_1.txt  output.txt
algobadge/collatz/: collatz.py
algobadge/condividi_il_cioccolato/: cioccolato.html  cioccolato_input_1.txt  cioccolato_input_2.txt  cioccolato_output_2.txt
algobadge/decathlon/: decathlon.py  grader.py
algobadge/diaper/: diaper.py
algobadge/elevatorbuttons/: elevatorbuttons.py
algobadge/falsificazione_dei_dadi/: dadi.html  dadi_input_2.txt  dadi_input_4.txt  dadi_output_2.txt  dadi_output_4.txt
algobadge/filmati_e_canzoni/: download.html  download_input_1.txt  download_output_1.txt
algobadge/gira_la_ruota/: ruota.html
algobadge/massimo2/: massimo.c
algobadge/natoabc/: natoabc.py
algobadge/percorso_ad_ostacoli/: saltatutto.html  saltatutto_input_1.txt  saltatutto_input_2.txt  saltatutto_input_3.txt  saltatutto_input_4.txt  saltatutto_input_5.txt  saltatutto_input_6.txt  saltatutto_input_7.txt  saltatutto_input_8.txt  saltatutto_input_9.txt  saltatutto_output_1.txt  saltatutto_output_2.txt  saltatutto_output_3.txt  (+6 more)
spegnitutto/: spegnitutto.html  spegnitutto_input_2.txt  spegnitutto_output_2 (1).txt
(+65 files in other folders)
